# ppa_analysis

./: .gitignore  LICENSE  README.md  advanced_settings.py  alt_ppa.py  api_examples.ipynb  backup_flow_notebook.ipynb  battery.py  bill_calc.py  charts.py  data_loading.ipynb  demand_flexibility.py  emissions.py  examples.ipynb  firming_contracts.py  flow_notebook.ipynb  get_emissions_intensity.py  get_load_and_weather_data.py  glossary.md  helper_functions.py  hybrid.py  interface.ipynb  load_flex.py  msat_replicator.py  optimisation_tests.ipynb  ppa.py  pyproject.toml  replicate_test.py  requirements.txt  residuals.py  scenario_runner.py  scratch.py  sunspot_bill_calculator.py  tariffs.py  test_msat_replicator.ipynb  test_notebook.ipynb  time_series_data_with_battery  user_inputs.py
data_caches/: Large_Commercial_23_24.json
data_caches/c_and_i_customer_loads/: (18) Hospital NQ.csv  (20) Sawmill WB.csv  (23) Pipe manufacturer SW.csv  (24) Offices FN.csv  (+29 more)
getting_data/: download_gen_data.py  download_pricing_data.py  import_emissions_data.py  import_gen_data.py  import_load_data.py  import_pricing_data.py
ppa_analysis/: advanced_settings.py  battery.py  bill_calc.py  charts.py  firming_contracts.py  helper_functions.py  hybrid.py  import_data.py  import_emissions_data.py  import_gen_data.py  import_load_data.py  load_flex.py  matching.py  msat_replicator.py  predispatch_prices.py  scenario_runner.py  tariffs.py  user_inputs.py
templates/: other_charges_structure_template.json  tariff_structure_template.json
tests/: optimisation_tests.ipynb  test_file.csv
(+34 files in other folders)
